# solo-rs-pool

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  pool.sqlite-shm  pool.sqlite-wal  solo-pool.sqlite-shm  solo-pool.sqlite-wal
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql-analysis.yml
src/: job.rs  main.rs  node.rs  storage.rs  stratum.rs
src/web/: mod.rs  templates.rs
src/web/templates/: blocks.html  layout.html  workers.html
src/web/templates/static/: style.css
templates/: dashboard.html  layout.html  workers.html
