[package]
name = "solo-rs-pool"
version = "0.1.0"
edition = "2021"
description = "A lightweight Stratum V1 solo mining pool for Bitcoin Core (regtest/testnet/mainnet), written in Rust."
authors = ["Chuck Byam <cbyam@icloud.com>"]
license = "MIT"
repository = "https://github.com/cbyam/solo-rs-pool"
readme = "README.md"
keywords = ["bitcoin", "stratum", "mining", "rust"]
categories = ["cryptography", "network-programming", "web-programming"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["http2", "macros"] }
askama = "0.12"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
bitcoin = { version = "0.32.7", features = ["std"] }
bitcoin_hashes = "0.14"
bitcoincore-rpc = "0.19"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
zmq = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-stream = "0.3"
futures-core = "0.3"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
dotenvy = "0.15"

